--- a/kustomization/overlays/prod/aventertainment/kustomization.yml
+++ b/kustomization/overlays/prod/aventertainment/kustomization.yml
@@ -4,6 +4,7 @@ kind: Kustomization
 
 components:
   - ../../../components/ripper
+  - ../../../components/tdarr
 namespace: aventertainment
 patches:
   - path: patches/add_ripper_volumes.yml
