--- a/kustomization/components/tdarr/kustomization.yml
+++ b/kustomization/components/tdarr/kustomization.yml
@@ -8,6 +8,7 @@ images:
   - name: ghcr.io/haveagitgat/tdarr_node
     newTag: 2.17.01
 resources:
+  - deployment.yml
   - persistentvolumeclaim.yml
   - service.yml
   - statefulset.yml
