--- a/kustomization/overlays/prod/aventertainment/ingress.yml
+++ b/kustomization/overlays/prod/aventertainment/ingress.yml
@@ -4,6 +4,7 @@ kind: Ingress
 metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
     traefik.ingress.kubernetes.io/router.tls: "true"
   name: aventertainment-ingress
 spec:
