--- a/kustomization/overlays/prod/aventertainment/kustomization.yml
+++ b/kustomization/overlays/prod/aventertainment/kustomization.yml
@@ -3,10 +3,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 components:
+  - ../../../components/jellyfin
   - ../../../components/ripper
   - ../../../components/tdarr
 namespace: aventertainment
 patches:
+  - path: patches/add_jellyfin_volumes.yml
+    target:
+      kind: StatefulSet
+      name: jellyfin-statefulset
   - path: patches/add_ripper_volumes.yml
     target:
       kind: Deployment
