add bypass on the homenetwork for jellyfin

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -38,6 +38,10 @@ access_control:
         - ^/auth/token/.*$
         - ^/service_worker.js$
         - ^/static/.*$
+    - domain: jellyfin.tswn.us
+      networks:
+        - home
+      policy: bypass
     - domain: opensprinkler.hogs.tswn.us
       networks:
         - home
