--- a/kustomization/overlays/prod/aventertainment/patches/add_tdarr_server_volumes.yml
+++ b/kustomization/overlays/prod/aventertainment/patches/add_tdarr_server_volumes.yml
@@ -11,7 +11,12 @@ spec:
           volumeMounts:
             - mountPath: /media
               name: tdarr-media
+            - mountPath: /rips
+              name: tdarr-rips
       volumes:
         - name: tdarr-media
           persistentVolumeClaim:
             claimName: media-pvc
+        - name: tdarr-rips
+          persistentVolumeClaim:
+            claimName: rips-pvc
