--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -188,6 +188,8 @@ bind_zones:
         ip: 10.11.0.104
       - name: worker02.hogs
         ip: 10.11.0.104
+      - name: paperless-samba.hogs
+        ip: 10.11.1.32
       - name: traefik.hogs
         ip: 10.11.1.64
         aliases:
@@ -203,6 +205,7 @@ bind_zones:
           - mqtt.hogs
           - nas.hogs
           - opensprinkler.hogs
+          - paperless.hogs
           - prometheus.hogs
           - ripper.hogs
           - tdarr.hogs
