--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -16,6 +16,7 @@ resources:
   - application/homeassistant.yml
   - application/kube-vip.yml
   - application/longhorn.yml
+  - application/paperless.yml
   - application/postgresql.yml
   - application/prometheus.yml
   - application/redis.yml
