be more permissive about limits for paperless

--- a/kustomization/overlays/prod/paperless/patches/set_paperless_customizations.yml
+++ b/kustomization/overlays/prod/paperless/patches/set_paperless_customizations.yml
@@ -51,3 +51,7 @@ spec:
                   key: redis_url
                   name: paperless-secrets
           name: paperless
+          resources:
+            limits:
+              cpu: 4000m
+              memory: 8Gi
