retain snapshots for less time

--- a/kustomization/components/longhorn/recurringjob.yml
+++ b/kustomization/components/longhorn/recurringjob.yml
@@ -22,7 +22,7 @@ spec:
   cron: "5 */1 * * *"
   groups:
     - default
-  retain: 96 # Four Days
+  retain: 48 # Two Days
   task: snapshot
 ---
 apiVersion: longhorn.io/v1beta1
