add a service that can be used to proxy Jellyfin

--- a/kustomization/components/jellyfin/statefulset.yml
+++ b/kustomization/components/jellyfin/statefulset.yml
@@ -20,6 +20,8 @@ spec:
           ports:
             - containerPort: 8096
               name: web
+            - containerPort: 7359
+              name: discovery
           resources:
             limits:
               cpu: 2000m
