no need for a seperate service

--- a/kustomization/components/jellyfin/service.yml
+++ b/kustomization/components/jellyfin/service.yml
@@ -5,6 +5,9 @@ metadata:
   name: jellyfin-svc
 spec:
   ports:
+    - name: discovery
+      port: 7359
+      protocol: UDP
     - name: web
       port: 8096
       protocol: TCP
