fix tdarr permissions

--- a/kustomization/overlays/prod/aventertainment/kustomization.yml
+++ b/kustomization/overlays/prod/aventertainment/kustomization.yml
@@ -19,6 +19,10 @@ patches:
     target:
       kind: StatefulSet
       name: tdarr-server-statefulset
+  - path: patches/set_tdarr_worker_user_and_group.yml
+    target:
+      kind: Deployment
+      name: tdarr-node-deployment
   - path: patches/set_jellyfin_service_ip.yml
     target:
       kind: Service
