Move to use NFS for a cache

--- a/kustomization/overlays/prod/aventertainment/persistentvolume.yml
+++ b/kustomization/overlays/prod/aventertainment/persistentvolume.yml
@@ -2,6 +2,20 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  name: media-pv
+spec:
+  accessModes:
+    - ReadWriteMany
+  capacity:
+    storage: 2Ti
+  nfs:
+    path: /mnt/rust0/nfs/media
+    server: services-nfs.hogs.tswn.us
+  persistentVolumeReclaimPolicy: Retain
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
   name: rips-pv
 spec:
   accessModes:
@@ -16,13 +30,13 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: media-pv
+  name: tdarr-cache-pv
 spec:
   accessModes:
     - ReadWriteMany
   capacity:
-    storage: 2Ti
+    storage: 1Ti
   nfs:
-    path: /mnt/rust0/nfs/media
+    path: /mnt/rust0/nfs/tdarr-cache
     server: services-nfs.hogs.tswn.us
   persistentVolumeReclaimPolicy: Retain
