--- a/kustomization/overlays/prod/aventertainment/persistentvolumeclaim.yml
+++ b/kustomization/overlays/prod/aventertainment/persistentvolumeclaim.yml
@@ -2,6 +2,19 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: media-pvc
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 2Ti
+  volumeName: media-pv
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: rips-pvc
 spec:
   accessModes:
@@ -15,12 +28,14 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: media-pvc
+  name: tdarr-cache-pvc
 spec:
   accessModes:
     - ReadWriteMany
   storageClassName: ""
   resources:
     requests:
-      storage: 2Ti
-  volumeName: media-pv
+      # Size this according to:
+      # (Number of Workers) * (Max Jobs per Worker) * (Max Disk Size of File)
+      storage: 1Ti
+  volumeName: tdarr-cache-pv
