--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -35,7 +35,7 @@ access_control:
       resources:
         - ^/.external_auth=.$
         - ^/api.*$
-        - ^/auth/token/.*$
+        - ^/auth/token.*$
         - ^/service_worker.js$
         - ^/static/.*$
     - domain: jellyfin.tswn.us
