add hacsfiles/iconset.js to allowed bypass

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -36,6 +36,7 @@ access_control:
         - ^/.external_auth=.$
         - ^/api.*$
         - ^/auth/token.*$
+        - ^/hacsfiles/iconset.js$
         - ^/service_worker.js$
         - ^/static/.*$
     - domain: jellyfin.tswn.us
