--- a/group_vars/vyos.yml
+++ b/group_vars/vyos.yml
@@ -56,6 +56,7 @@ vyos_ospfv2__areas:
       - address: 10.11.0.0/23
       - address: 10.117.0.0/23
       - address: 10.117.2.0/24
+      - address: 172.31.42.0/24 # jellyfin vpn
   # WAN Routers
   - area_id: 1
     authentication: md5
