improvements to networking with hfp

--- a/firewall_zones/vyos_remote/hfp/from-maccabeus-ipv4.yml
+++ b/firewall_zones/vyos_remote/hfp/from-maccabeus-ipv4.yml
@@ -1,7 +1,7 @@
 ---
-- description: "Allow ICMP"
-  action: "accept"
-  protocol: "icmp"
+- description: Allow ICMP
+  action: accept
+  protocol: icmp
   icmp:
     type_name: any
 - description: Allow SSH
