--- a/group_vars/vyos_hogs.yml
+++ b/group_vars/vyos_hogs.yml
@@ -142,6 +142,10 @@ vyos_firewall_global__group:
         - address: 10.117.0.10
         # chanttogreen.hogs.tswn.us
         - address: 10.10.0.14
+    - name: HFP-SSH-v4
+      description: Addresses allowed to ssh to HFP machines.
+      members:
+        - address: 10.10.0.20 # sdwilsh-dev
     - name: HOME-SERVICES-v4
       description: Kubernetes Services for the HOME network.
       afi: ipv4
