--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -23,4 +23,5 @@ resources:
   - application/traefik.yml
   - application/unifi.yml
   - application/valheim-forerunner.yml
+  - application/valheim-relic.yml
   - application/vector.yml
