--- a/kustomization/overlays/prod/argo-proj/application/valheim-relic.yml
+++ b/kustomization/overlays/prod/argo-proj/application/valheim-relic.yml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: valheim-forerunner
+  name: valheim-relic
   namespace: argocd
 spec:
   project: default
