--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -2,6 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+components:
+  - ../../../components/priorityclass
 namespace: argocd
 resources:
   - project.yml
